gke_config/be-envoy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
  labels:
    app: be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be  
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
      - name: envoy-container
        image: salrashid123/grpc_envoyproxy
        imagePullPolicy: Always          
        ports:
        - containerPort: 18080
          protocol: TCP
        - containerPort: 18081
          protocol: TCP
