gke_config/be-grpc-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-grpc-deployment
  labels:
    app: be-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be-grpc  
  template:
    metadata:
      labels:
        app: be-grpc
    spec:
      containers:
      - name: grpc-container
        image: salrashid123/grpc_backend
        imagePullPolicy: Always          
        ports:
        - containerPort: 50051
          protocol: TCP
        command: ["./grpc_server"]
        args: ["-grpcport","0.0.0.0:50051"]
