gke_config/fe-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe  
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: fe-container
        image: salrashid123/web_frontend
        imagePullPolicy: IfNotPresent                   
        ports:
        - containerPort: 8000
          protocol: TCP
