gke_config/be-envoy-srv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: be-srv
  labels:
    type: be-srv
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"be":"HTTPS"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort 
  ports:
  - name: be
    port: 18080
    protocol: TCP
    targetPort: 18080   
  selector:
    app: be
