gke_config/be-grpc-srv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: be-srv-grpc
  labels:
    type: be-srv-grpc
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"be-grpc":"HTTP2"}'
    cloud.google.com/neg: '{"ingress": false}'    
spec:
  type: ClusterIP
  ports:
  - name: be-grpc
    port: 50051
    protocol: TCP
    targetPort: 50051      
  selector:
    app: be-grpc
