gke_config/fe-srv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv
  labels:
    type: fe-srv
  annotations:
    cloud.google.com/app-protocols: '{"fe":"HTTPS"}'
    cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8000":{}}}'    
spec:
  type: NodePort 
  ports:
  - name: fe
    port: 8000
    protocol: TCP
    targetPort: 8000   
  selector:
    app: fe
